attempt to fix scrollbar hide

--- a/src/components/layout/PageLayout.css
+++ b/src/components/layout/PageLayout.css
@@ -1,5 +1,6 @@
 .page {
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .page__header {
