--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 /* TODO: move common styling here */
 html {
   --body-background: #000;
